# YTDownload-2026

./: .gitignore  AGENTS.md  README.md  app.py  main.py  mcp_stdio_server.py  pyproject.toml  run_debug.bat
.github/instructions/: arc_serial.instructions.md  build_system.instructions.md  commit_message.md.instructions.md  concept.instructions.md  entry_points.instructions.md  error_analys.instructions.md  gui_patterns.instructions.md  logging.instructions.md  mcp_server.instructions.md  qt_race_conditions.instructions.md  qt_signals_threading.instructions.md  running_app.instructions.md  testing.instructions.md  ui_icons_colors.instructions.md
.github/workflows/: ci.yml
docs/: MCP_PYSIDE6_GUIDE.md  README.md  cli_mcp_unification_plan.md  you_tube_выгрузка_в_2026_playwright_yt_dlp_ffmpeg_прокси_метаданные_субтитры.md
docs/agent-instructions/: 01-project-overview.md  02-environment-and-dependencies.md  03-download-testing.md  04-mcp-and-gui.md  05-quality-gates.md
resources/: app.manifest  master_icon.psd
scripts/: __init__.py  download_ffmpeg.py  mcp_expected_tools.py  smoke_cli_help.py  smoke_gui.py  smoke_mcp.py  smoke_mcp_stdio.py
src/: __init__.py
src/application/: __init__.py  api.py  command_api.py  download_coordinator.py  dto.py  history_queries.py  (+1 more)
tests/: __init__.py  conftest.py  test_application_api_queries.py  test_cli_command_api.py  test_cli_root.py  test_download_e2e.py  test_ffmpeg.py  test_ffmpeg_detection.py  test_history_cli_queries.py  test_history_widget.py  test_mcp_manifest.py  test_url_utils.py  test_ytdlp_unit.py
(+54 files in other folders)
