[project]
name = "ytdownloader"
version = "0.1.0"
description = "YouTube Downloader — yt-dlp + FFmpeg + PySide6"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7.0",
    "yt-dlp>=2024.1.1",
    "fastmcp>=2.0.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
    "mypy>=1.9.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: End-to-end тесты с реальными загрузками (требуют сеть)",
    "slow: Медленные тесты (длительные загрузки)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = ["tests/", "build/"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
